@startuml
' hide the spot
hide circle
skinparam dpi 300
' avoid problems with angled crows feet
skinparam linetype ortho

entity "users" as usr {
  *id: Integer<<PK>>
  --
  *user_name : Varchar(255)
  *gender : Enumerate
  *user_status : Enumerate
  *email : Varchar(255)
  *email_verified_at : Varchar(255)
  *date_of_birth : Date
  *phone : Varchar(255)
  *account_number: Varchar(255)
  *ban_name: Varchar(255)
  *user_role_id : Integer <<FK>>
  *profile_picture : Varchar(255)
  *profile_picture : Varchar(255)
  *account_number : Varchar(255)
  *password : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

entity "user_roles" as usrl {
  *id: Integer<<PK>>
  --
  *user_role_name : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

entity "boarding_types" as bht {
  *id : Integer <<PK>>
  --
  *name : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

entity "boardings" as bh {
  *id : Integer <<PK>>
  --
  *type_id : Integer <<FK>>
  *boarding_name : Varchar(255)
  *address : Longtext
  *latitude : Varchar(255)
  *longitude : Varchar(255)
  *rooms : Integer
  *shared_bathroom : Boolean
  *price : Integer
  *boarding_desc : Longtext
  *created_at : Date
  *updated_at : Date
}

entity "tenant_boardings" as tb {
  *id : Integer <<PK>>
  --
  *user_id : Integer <<FK>>
  *boarding_id : Integer <<FK>>
  *start_date: Date
  *end_date: Date
  *tenant_status : Enumerate
  *declined_reason : longtext
  *created_at : Date
  *updated_at : Date
}

entity "facility_details" as fd {
  *id: Integer <<FK>>
  --
  *name : Varchar(255)
  *facility_img_path : Varchar(255)
  *created_at : Date
  *updated_at : Date
}


entity "facilities" as f {
  *id : Integer <<PK>>
  *facility_id : Integer <<FK>>
  *boarding_id : Integer <<FK>>
  --
  *created_at : Date
  *updated_at : Date
}

entity "boarding_images" as bhi {
  *id : Integer <<PK>>
  *boarding_id : Integer <<FK>>
  --
  *image : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

entity "rent_transaction" as rt {
  *id : Integer <<PK>>
  --
  *tenant_boarding_id : Integer <<FK>>
  *transaction_type_id : Integer <<FK>> 
  *payment_method_id : Integer <<FK>>
  *invoice_id : Integer
  *amount : Integer
  *payment_date : Date
  *payment_status : Enumerate
  *payment_transferred_status : Enumerate
  *repeat_payment : Boolean
  *created_at : Date
  *updated_at : Date
}


entity "owner_boardings" as lobh {
  *id : Integer <<PK>>
  --
  *user_id : Integer <<FK>>
  *boarding_id : Integer <<FK>>
  *owner_status: Enumerate
  *declined_reason : longtext
  *created_at : Date
  *updated_at : Date
}

entity "manager_boardings" as mabh {
  *id : Integer <<PK>>
  --
  *boarding_id : Integer <<FK>>
  *user_id : Integer <<FK>>
  *created_at : Date
  *updated_at : Date
}

entity "complain_types" as cmplnt {
  *id : Integer <<PK>>
  --
  *complain_type_name : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

entity "reviews" as rvw {
  *id : Integer <<PK>>
  --
  *user_id : Integer <<FK>>
  *boarding_id : Integer <<FK>>
  *rating : Integer
  *review_desc : Longtext
  *created_at : Date
  *updated_at : Date
}

entity "complains" as cmpln {
  *id : Integer <<PK>>
  --
  *user_id : Integer <<FK>>
  *boarding_id : Integer <<FK>>
  *complain_type_id : Integer <<FK>>
  *complain_desc : Longtext
  *complain_image_url : Longtext
  *complain_status : Enumerate
  *created_at : Date
  *updated_at : Date
}

' Composite key
entity "wishlists" as fr {
  *id: Integer <<PK>>
  *boarding_id: Integer<<FK>>
  *user_id: Integer<<FK>>
  --
  *created_at : Date
  *updated_at : Date
}

entity "payment_methods" as pymnt {
  *id: Integer<<PK>>
  --
  *payment_method_name: Varchar(255)
  *status: Enumerate
  *created_at : Date
  *updated_at : Date
}

entity "chats" as cht {
  *id: Integer<<PK>>
  --
  *sender_id: Integer<<FK>>
  *receiver_id: Integer<<FK>>
  *message: Longtext
  *created_at : Date
  *updated_at : Date
}

entity "transaction_types" as tt {
  *id : Integer <<PK>>
  --
  *transaction_type_name : Varchar(255)
  *created_at : Date
  *updated_at : Date
}

usrl ||..o{usr
bh ||..o{ bhi
bh ||..o{ f
fd ||..o{ f

usr ||..o{ tb
bh ||..o{ tb

tb ||..o{ rt
pymnt ||..o{ rt
tt ||..o{rt

usr ||..o{ lobh
lobh ||..o{ bh

usr ||..o{ mabh
bh ||.o{ mabh

usr ||..o{ rvw
bh ||..o{ rvw

usr ||..o{ cmpln
bh ||..o{ cmpln
cmplnt ||..o{ cmpln

bht ||..o{ bh


usr ||..o{ fr
bh ||..o{ fr

usr |o..o{ cht

@enduml